--- a/css/footer.css
+++ b/css/footer.css
@@ -36,6 +36,10 @@
   color: #8f8f8f;
 }
 
+.footer .instagram:hover{
+  color: red;
+}
+
 @media (max-width: 800px) {
   .footer-container {
     grid-template-columns: 1fr;
