--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -106,3 +106,9 @@
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 500px) {
+  .experiencia .subtitulo{
+    font-size: 1rem;
+  }
+}
