--- a/css/formacao.css
+++ b/css/formacao.css
@@ -77,7 +77,7 @@
   display: block;
   width: 4px;
   height: 20px;
-  background: linear-gradient(#b6f829, #67dd0a);
+  background: linear-gradient(#8aa3e4, #b65dde);
   position: absolute;
   left: -24px;
 }
