--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -39,7 +39,7 @@
   display: block;
   width: 4px;
   height: 20px;
-  background: linear-gradient(#b6f829, #67dd0a);
+  background: linear-gradient(#8aa3e4, #b65dde);
   position: absolute;
   top: 20px;
   left: -4px;
