--- a/css/introducao.css
+++ b/css/introducao.css
@@ -63,4 +63,9 @@
   .introducao h1{
     font-size: 2rem;
   }
+  .introducao #row{
+    width: 340px;
+    border: 1px solid #000;
+    margin-top: 100px;
+  }
 }
